--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
       background: rgba(10, 10, 10, 0.6);
       backdrop-filter: blur(40px) saturate(180%);
       -webkit-backdrop-filter: blur(40px) saturate(180%);
-      /* border: 1px solid rgba(255, 255, 255, 0.1); */
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.05);
+      transition: all 0.5s ease, box-shadow 0.5s ease, border-color 0.3s ease;
     }
 
     .glass-card::before {
@@ -121,7 +121,7 @@
       inset: 0;
       border-radius: inherit;
       opacity: 0;
-      transition: opacity 0.3s ease;
+      transition: opacity 0.5s ease;
       pointer-events: none;
       background: radial-gradient(600px circle at var(--mouse-x, 50%) var(--mouse-y, 50%), rgba(59, 130, 246, 0.12), transparent 40%);
     }
@@ -132,7 +132,7 @@
 
     .glass-card:hover {
       border-color: rgba(255, 255, 255, 0.15);
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4), 0 0 60px rgba(59, 130, 246, 0.08), inset 0 1px 0 rgba(255, 255, 255, 0.08);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4), 0 0 50px rgba(255, 255, 255, 0.08), inset 0 1px 0 rgba(255, 255, 255, 0.08);
     }
 
     /* Link and button cursor styles */
