--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
           fontFamily: {
             sans: ['Inter', 'sans-serif'],
           },
+          screens: {
+            '2xl': '1536px',
+            '3xl': '1920px',
+          },
           colors: {
             gray: {
               50: '#f9fafb',
