--- a/index.html
+++ b/index.html
@@ -78,28 +78,31 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #030305;
+      background-color: #0a1120;
       background-image:
-        radial-gradient(ellipse 100% 80% at 50% -30%, rgba(59, 130, 246, 0.12), transparent 50%),
-        radial-gradient(ellipse 80% 60% at 100% 80%, rgba(99, 102, 241, 0.08), transparent 50%),
-        radial-gradient(ellipse 60% 50% at 0% 100%, rgba(139, 92, 246, 0.06), transparent 50%),
-        radial-gradient(ellipse 40% 30% at 80% 20%, rgba(59, 130, 246, 0.05), transparent 40%),
-        url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+        radial-gradient(ellipse 100% 80% at 50% -30%, rgba(59, 130, 246, 0.22), transparent 60%),
+        radial-gradient(ellipse 80% 60% at 100% 80%, rgba(99, 102, 241, 0.16), transparent 60%),
+        radial-gradient(ellipse 60% 50% at 0% 100%, rgba(139, 92, 246, 0.13), transparent 60%),
+        radial-gradient(ellipse 40% 30% at 80% 20%, rgba(59, 130, 246, 0.10), transparent 50%),
+        url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.7' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.18'/%3E%3C/svg%3E");
       background-blend-mode: normal, normal, normal, normal, soft-light;
       background-attachment: fixed;
       color: #F5E6D3;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     body::before {
       content: '';
       position: fixed;
       inset: 0;
-      background: radial-gradient(circle at 50% 50%, transparent 0%, rgba(3, 3, 5, 0.4) 100%);
+      background:
+        radial-gradient(ellipse 60% 40% at 50% 0%, rgba(59, 130, 246, 0.13), transparent),
+        radial-gradient(circle at 20% 80%, rgba(139, 92, 246, 0.09), transparent 35%),
+        radial-gradient(circle at 80% 20%, rgba(34, 211, 238, 0.08), transparent 30%);
       pointer-events: none;
-      z-index: 0;
+      z-index: 1;
     }
 
 
