--- a/index.html
+++ b/index.html
@@ -64,11 +64,16 @@
           },
           animation: {
             'scroll': 'scroll 30s linear infinite',
+            'fade-in-up': 'fadeInUp 0.3s ease-out forwards',
           },
           keyframes: {
             scroll: {
               '0%': { transform: 'translateX(0)' },
               '100%': { transform: 'translateX(-50%)' },
+            },
+            fadeInUp: {
+              '0%': { opacity: '0', transform: 'translate(-50%, 20px)' },
+              '100%': { opacity: '1', transform: 'translate(-50%, 0)' },
             }
           }
         }
